Added default translations for transaction filter in activity widget
Issue: #3600