@@ -8,7 +8,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 import org.eclipse.jface.layout.GridDataFactory;
 import org.eclipse.jface.layout.GridLayoutFactory;
@@ -332,15 +331,15 @@ public class ActivityWidget extends WidgetDelegate<List<TransactionPair<?>>>
             {
                 List<Year> years = interval.getYears();
                 chart.setData(years);
-                xAxis.setCategorySeries(years.stream().map(year -> String.valueOf(year.getValue()))
-                                .collect(Collectors.toList()).toArray(new String[0]));
+                xAxis.setCategorySeries(years.stream().map(year -> String.valueOf(year.getValue())).toList()
+                                .toArray(new String[0]));
             }
             else
             {
                 List<YearMonth> yearMonths = interval.getYearMonths();
                 chart.setData(yearMonths);
-                xAxis.setCategorySeries(yearMonths.stream().map(ym -> String.valueOf(ym.getMonthValue()))
-                                .collect(Collectors.toList()).toArray(new String[0]));
+                xAxis.setCategorySeries(yearMonths.stream().map(ym -> String.valueOf(ym.getMonthValue())).toList()
+                                .toArray(new String[0]));
             }
 
             TransactionFilter filter = get(TransactionFilterConfig.class).getValue();
@@ -428,12 +427,10 @@ public class ActivityWidget extends WidgetDelegate<List<TransactionPair<?>>>
             {
                 switch (chartType)
                 {
-                    case COUNT:
-                    case COUNT_BY_YEAR:
+                    case COUNT, COUNT_BY_YEAR:
                         series[indexOf] += 1;
                         break;
-                    case SUM:
-                    case SUM_BY_YEAR:
+                    case SUM, SUM_BY_YEAR:
                         series[indexOf] += (tx.get().getTransaction().getMonetaryAmount(converter).getAmount()
                                         / Values.Amount.divider());
                         break;
